# ChangeLog for sys-libs/nss-db
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/nss-db/ChangeLog,v 1.21 2009/12/08 19:03:52 nixnut Exp $

  08 Dec 2009; nixnut <nixnut@gentoo.org> nss-db-2.2.3_pre1-r2.ebuild:
  ppc stable #291811

  09 Nov 2009; Markus Meier <maekke@gentoo.org> nss-db-2.2.3_pre1-r2.ebuild:
  amd64/x86 stable, bug #291811

  04 Nov 2009; Robin H. Johnson <robbat2@gentoo.org>
  nss-db-2.2.3_pre1-r2.ebuild:
  Minor repoman cleanup.

  04 Nov 2009; Robin H. Johnson <robbat2@gentoo.org>
  -nss-db-2.2.3_pre1.ebuild, -nss-db-2.2.3_pre1-r1.ebuild:
  Cleanup old ebuilds.

  11 Oct 2008; Diego Pettenò <flameeyes@gentoo.org>
  nss-db-2.2.3_pre1-r2.ebuild:
  Fix invalid atom.

  28 May 2008; Markus Meier <maekke@gentoo.org> nss-db-2.2.3_pre1-r2.ebuild:
  add some quotes

  28 May 2008; Markus Meier <maekke@gentoo.org> nss-db-2.2.3_pre1-r2.ebuild:
  add ~amd64, bug #213760

  26 Feb 2007; Robin H. Johnson <robbat2@gentoo.org> nss-db-2.2-r1.ebuild:
  Bug #163190, fix mirror://gnu usage.

*nss-db-2.2.3_pre1-r2 (26 Feb 2007)

  26 Feb 2007; Robin H. Johnson <robbat2@gentoo.org>
  +nss-db-2.2.3_pre1-r2.ebuild:
  Bug #150310, #160053 - cleanups of autotools stuff.

  22 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

  07 Oct 2006; Robin H. Johnson <robbat2@gentoo.org>
  nss-db-2.2.3_pre1.ebuild, nss-db-2.2.3_pre1-r1.ebuild:
  Upstream has moved the source file.

  16 Mar 2006; <pauldv@gentoo.org> nss-db-2.2.3_pre1-r1.ebuild:
  Fix building with newer db versions.

  04 Jul 2005; David Holm <dholm@gentoo.org> nss-db-2.2.3_pre1-r1.ebuild:
  Added to ~ppc.

*nss-db-2.2.3_pre1-r1 (03 Jul 2005)

  03 Jul 2005; Robin H. Johnson <robbat2@gentoo.org>
  +files/nss-db-2.2.3_pre1-root-upgrade-only.patch,
  +nss-db-2.2.3_pre1-r1.ebuild:
  Add small patch to only use db->update when root privileges are present.

*nss-db-2.2.3_pre1 (16 Feb 2005)
