@@ -1,6 +1,7 @@
 AUX db3.patch 1174 RMD160 eeac21cb96b84070ddd1cb4975e4c42793711f12 SHA1 1733d2d5ee9cd8e6075bcb2d37b40291985d8721 SHA256 2db3285c19657c9dfad4ced22e17d0bf19268c12779e781716cd87db6fac7bf0
 AUX nss-db-2.2.3_pre1-root-upgrade-only.patch 706 RMD160 e13940f6ff0dc48014a73a245b11ca9086de6a50 SHA1 cdc016300086dd18ad8ad916a37d6791425c9b83 SHA256 097bb136444f03aebd482a81c6039ef82c8cc3aeee80c6750f3165d7d9a2fef3
 AUX remake-all-db 233 RMD160 e1a896ad287edf451a68bcdfa4c68e4c0678556e SHA1 4122643ca4aaad940017fa0ca7371cbeb0c18fed SHA256 16ea89210a3e5d0249665b425ad191244d159639028b1f9cb534d7cc9aef4f7d
+AUX sandbox.d_50nss-db 284 RMD160 fa90f7db952beb897242446af39275ecc3b7cea2 SHA1 9d112daa3ac16d7c5bfdb4f3935bd8f6bfa21737 SHA256 a3dce2b52c9707a13166b7640854de966042d823e11f3277e357025a4771faf3
 DIST nss_db-2.2.3pre1-dbopen.patch.bz2 258 RMD160 2a7b96393cf3c338c8bc1041e26824dbca74aa57 SHA1 966c4baf1c23cc2fe3f5930e2d898659ed9ac391 SHA256 9d7bf1ef17ca91c59c234bfa96d4b9e3f866a792c609a02cc6d9daa601dee1d3
 DIST nss_db-2.2.3pre1-dbupgrade.patch.bz2 263 RMD160 90ad8e330a7677f8ebd4a2fd210d258d8ba1e496 SHA1 223701c38b1d1935bc9d0ce13d56ae4e7743927a SHA256 31052eb79cc4aa60f639a3a57d9225630327ee6c728d62eda1d9c91ea7d70dc3
 DIST nss_db-2.2.3pre1-external.patch.bz2 1870 RMD160 d85fdb31935c5ab75ed80b1159155f5fa5b8a2e5 SHA1 b736463196d2b2438f03a801579e51e529c6a152 SHA256 dbc45a4dc7c977fae2193e0a14fdb862a5f42479ac40da0d4772d5d66e95ade0
@@ -8,5 +9,6 @@ DIST nss_db-2.2.3pre1.tar.gz 235360 RMD160 a511fcc1dc7937e13e84ccd125d688463ac52
 DIST nss_db-2.2.tar.gz 128636 RMD160 c67db191c7ae720b39a5b45866b110bd20d45585 SHA1 5a4796ae61e6e7b679f6559f0094f6a999311661 SHA256 aa8f54138b8797a6eeaf0e30364f45ff4d7d1d7e2846d8495de946509fda56f0
 EBUILD nss-db-2.2-r1.ebuild 1012 RMD160 d7f5ff010159a1a8d14bc42e802d1bf49d98d0b9 SHA1 3389daab85b1ab3363813b347f993eacdd4d74af SHA256 bf4474cc88cc7909602229c1cf6a026fc48ad352d889209d00289d5a7204c4f4
 EBUILD nss-db-2.2.3_pre1-r2.ebuild 3213 RMD160 e61bf19e54021e48983d72d59d0b0131e6ce6d1a SHA1 62742c22a93cd5e1a564214eecc2e810133c36c6 SHA256 70889006893c923e7fef5729bc24d2dec35d388fb42f2a6cb9e4abb1a6fbd8f6
-MISC ChangeLog 3010 RMD160 7e67bf1091f2cf5cfd2397dc26762234214cd42d SHA1 7b1a1911104898fc688fbe1efef5c8c9dcb6239b SHA256 7520202acca2a6451d23001009f3d0a5c7ee7ff6313bd2a0fff5bc2d5e7db65d
+EBUILD nss-db-2.2.3_pre1-r3.ebuild 3295 RMD160 a4beae4a0e7525f2e1b81810a8d9ba5505f26f67 SHA1 f7b867d9dd7456fa8789683970b302ac56ad7a99 SHA256 890aa76ffffe17eb08c753ae4bcb80c616d033960d1dd24944bfdd2f227193fc
+MISC ChangeLog 3196 RMD160 6c17e3ab7cbf1f8798fd1b3e1b9ec0c153925983 SHA1 ed07dd4292ca3c5ccb112e84ff6cab2af831aea5 SHA256 7955d54762c492aab9bc03dc31ee9be3eaa065fbdd48bfe847ce9942a79e1b01
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
