@@ -1,6 +1,12 @@
 # ChangeLog for sys-libs/nss-db
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/nss-db/ChangeLog,v 1.21 2009/12/08 19:03:52 nixnut Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/nss-db/ChangeLog,v 1.22 2010/06/18 06:23:55 robbat2 Exp $
+
+*nss-db-2.2.3_pre1-r3 (18 Jun 2010)
+
+  18 Jun 2010; Robin H. Johnson <robbat2@gentoo.org>
+  +nss-db-2.2.3_pre1-r3.ebuild, +files/sandbox.d_50nss-db:
+  Bug #308163: avoid sandbox more.
 
   08 Dec 2009; nixnut <nixnut@gentoo.org> nss-db-2.2.3_pre1-r2.ebuild:
   ppc stable #291811
